@@ -3,116 +3,151 @@ package Q1;
 import javax.swing.*;
 import java.awt.*;
 import java.util.ArrayList;
+import java.util.LinkedList;
+import java.util.Random;
 
-public class PigeonMap extends Canvas{
+public class PigeonMap extends Canvas {
 
+    // dimension de la carte
     int height;
     int width;
-    ArrayList<Food> foodList;
+
+    // tableaux stockant la nourriture et les pigeons
+    final LinkedList<Food> foodList;
     ArrayList<Pigeon> pigeonList;
 
+    // taille de la nourriture et des pigeons pour l'affichage
     int rangeFood = 10;
     int rangePigeon = 30;
+    // un MouseListener pour savoir où faire apparaitre la nourriture
     Mouse ms;
+    Random rand;
 
-    PigeonMap(int w, int h) {
+    // probabilite des pigeons de se faire effrayer
+    double threshold;
+
+    PigeonMap(int x, int y, int w, int h, Frame f) {
+        setBounds(x, y, w, h);
         height = h;
         width = w;
-        foodList = new ArrayList<Food>();
-        pigeonList = new ArrayList<Pigeon>();
-        ms = new Mouse(this);
-        this.addMouseListener(ms);
+        foodList = new LinkedList<>();
+        pigeonList = new ArrayList<>();
+        ms = new Mouse(this, f);
+        addMouseListener(ms);
+        rand = new Random();
+        threshold = 1;
     }
 
+    // ajoute de la nourriture aux coordonnees indiquees
     public void addFood(int x, int y) {
         int size = foodList.size();
-        foodList.add(new Food(x,y));
-        //System.out.println("add food go pigeon");
+        synchronized (foodList) {
+            foodList.addFirst(new Food(x, y));
+        }
+        // reveille les threads des pigeons si il etait en attentes
         if (size == 0) {
             for (Pigeon pigeon : pigeonList
             ) {
                 synchronized (pigeon) {
                     pigeon.notify();
                 }
-                //System.out.println("notify pigeon");
             }
         }
-        this.repaint();
     }
 
-    public void deleteFood(Food food) {
-        //System.out.println("delete the food");
-        foodList.remove(food);
+    // supprime la nourriture du terrain
+    public boolean deleteFood(Food food) {
+        synchronized (foodList) {
+            return foodList.remove(food);
+        }
     }
 
+    //ajoute un pigeon au tableau
     public void addPigeon(Pigeon pigeon) {
         pigeonList.add(pigeon);
     }
 
+    // récupere la nourriture la plus fraiche
     Food getFreshestFood() {
-        Food freshestFood = null;
-        if (!foodList.isEmpty()) {
-            freshestFood = foodList.get(0);
-            for (int i = 1; i < foodList.size(); i++) {
-                Food testedFood = this.foodList.get(i);
-                if (freshestFood.fresh > testedFood.fresh) {
-                    freshestFood = testedFood;
-                }
+        synchronized (foodList) {
+            if (!foodList.isEmpty()) {
+                return foodList.getFirst();
             }
         }
-
-        return freshestFood;
+        return null;
     }
 
-    float distanceBetweenPoint(float x1, float y1, float x2, float y2) {
-        return (float) Math.sqrt(Math.pow((x2-x1),2) + Math.pow((y2-y1),2));
-    }
-
+    // renvoie true si il n'y pas de nourriture
     public boolean hasNoFood() {
         return foodList.isEmpty();
     }
 
-
+    @SuppressWarnings({"BusyWait", "InfiniteLoopStatement"})
     public static void main(String[] args) {
-
-        PigeonMap map = new PigeonMap(1200, 700);
-
-        JFrame frame = new JFrame("PigeonMap");
-        map.setSize(1200, 700);
+        // initialise l'affichage
+        Frame frame = new Frame("Pigeon Feeder Simulator");
+        Dimension d = Toolkit.getDefaultToolkit().getScreenSize();
+        frame.setBounds(d.width / 10, d.height / 10, (int) (d.width * 0.8), (int) (d.height * 0.8));
+        PigeonMap map = new PigeonMap(0, 0, frame.getWidth(), frame.getHeight(), frame);
         frame.add(map);
         frame.pack();
 
-        frame.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
+        frame.addWindowListener(new CloserListener(frame, map));
         frame.setVisible(true);
-        frame.setResizable(false);
 
-
-
-        for (int i = 0; i < Integer.parseInt(args[0]) ; i++) {
+        // ajoute le nombre de pigeon passe en argument a la carte
+        for (int i = 0; i < Integer.parseInt(args[0]); i++) {
             (new Pigeon(map)).start();
         }
 
-        while(true) {
-            synchronized (map) {
-                for (int i = 0; i < map.foodList.size(); i++) {
-                    map.foodList.get(i).UpdateFresh();
-                }
+        while (true) {
+            // supprime la nourriture trop vieille
+            synchronized (map.foodList) {
+                map.foodList.removeIf(food -> System.currentTimeMillis() - food.creation > Food.MAX_FOOD_AGE);
             }
+
+            // recupere un nouveau nombre aleatoire pour savoir si les pigeons seront affrayes ou non
+            if (map.threshold < map.rand.nextDouble()) {
+                // les pigeons sont effrayes et la probabilite est reinitialise
+                map.scarePigeons();
+                map.threshold = 1;
+            } else {
+                // sinon la probabilité pour effraye les pigeons augmente
+                map.threshold *= 0.99999;
+            }
+
+            try {
+                Thread.sleep(20);
+            } catch (InterruptedException ignored) {
+            }
+            // met a jour l'affichage
+            map.repaint();
         }
 
     }
-
-    synchronized public void paint(Graphics g) {
-       for (Pigeon pigeon : pigeonList
-             ) {
-            g.setColor(Color.GRAY);
-            g.fillOval((int)pigeon.posX - rangePigeon/2, (int) pigeon.posY - rangePigeon/2, rangePigeon, rangePigeon);
+    // deplace aleatoirement tout les pigeons de la carte
+    void scarePigeons() {
+        for (Pigeon pigeon : pigeonList
+        ) {
+            pigeon.scare();
+        }
+    }
+    // realise l'affichage
+    public void paint(Graphics g) {
+        // les pigeons sont des cercles gris
+        g.setColor(Color.GRAY);
+        for (Pigeon pigeon : pigeonList
+        ) {
+            g.fillOval((int) pigeon.posX - rangePigeon / 2, (int) pigeon.posY - rangePigeon / 2, rangePigeon, rangePigeon);
         }
 
-        for (Food food: foodList
-             ) {
-            g.setColor(Color.GREEN);
-            g.fillRect((int)food.x - rangeFood/2, (int) food.y - rangeFood/2, rangeFood, rangeFood);
+        // la nourriture des carre vert
+        g.setColor(Color.GREEN);
+        synchronized (foodList) {
+            for (Food food : foodList
+            ) {
+                g.fillRect((int) food.x - rangeFood / 2, (int) food.y - rangeFood / 2, rangeFood, rangeFood);
+            }
         }
     }
 }
